# reinforcement-learning

./: .gitignore  README.md  pyproject.toml
assets/: [Exemple] Iterative Policy Evaluation and Policy Iteration on Line World.ipynb  [Links] Liens utilisés pendant l'intro (1).txt
docs/: algorithms.md  concepts.md  environments.md  experiments.md  index.md  utilities.md
examples/algorithms/dp/: run_dp_policy_eval.py
examples/algorithms/mc/: gridworld_run_mc_exploring_starts.py  gridworld_run_mc_offpolicy.py  gridworld_run_mc_onpolicy.py  line_world_run_mc_es.py  lineworld_run_mc_offpolicy.py  lineworld_run_mc_onpolicy.py  montyhall_run_mc_offpolicy.py  montyhall_run_mc_onpolicy.py  rps_run_mc_exploring_starts.py  rps_run_mc_onpolicy.py
examples/algorithms/td/: gridworld_run_expected_sarsa.py  gridworld_run_q_learning.py  gridworld_run_qlearning.py  gridworld_run_sarsa.py
examples/analysis/: load_gridworld_qlearning.py
experiments/: experimentation.ipynb  experimentation_own_envs.ipynb  experimentation_secret_envs.ipynb  main.py  secret_envs_wrapper.py
rf-learn/: pyvenv.cfg
src/reinfo/: main.py
src/reinfo/display/: display_grid.py  display_line.py  display_monty.py  display_rps.py
src/reinfo/environments/: base_environment.py  grid_world.py  line_world.py  montyhall_level1.py  montyhall_level2.py  rock_paper_scissors.py  rock_paper_scissors_two_rounds.py
src/reinfo/evaluation/: plotting.py
src/reinfo/utils/: io_utils.py
src/reinfolearn/: main.py  run_sweep.py
src/rlearn/: main.py
tests/environments/: test_montyhall_level1.py
(+58 files in other folders)
