[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reinfo"                     
version = "0.0.1"
description = "Package for Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Godwin AMEGAH", email = "komlan.godwin.amegah@gmail.com"}]
dependencies = [
    "pandas",
    "numpy"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pylint",
    "pytest-mock",
    "pytest-cov",
    "wheel",
    "mock"
]

[project.scripts]
reinfo = "reinfo.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["reinfo", "reinfo.*"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]

[tool.setuptools.package-data]
reinfo = ["py.typed"]